--- a/partials/FrontMatter/preface.tex
+++ b/partials/FrontMatter/preface.tex
@@ -1,4 +1,12 @@
-\chapter*{Preface}
+%%%%%%%%%%%%%%%%%%%%%%preface.tex%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% sample preface
+%
+% Use this file as a template for your own input.
+%
+%%%%%%%%%%%%%%%%%%%%%%%% Springer Nature %%%%%%%%%%%%%%%%%%%%%%%%
+
+\preface
+
 
 The story of the modern mind is one of a great displacement. For ages, a supreme God occupied the central, sovereign position in the human spirit, providing a foundation for meaning, morality, and order. The Enlightenment, that brave and brilliant turn, dethroned this divine sovereign. In its place, we enthroned a new regent: Reason.
 
@@ -16,4 +24,12 @@ and inspirations woven together through dialogue. It is our hope that in this sa
 and embodied by a community of thinkers and practitioners, becoming a living artifact of our collective 
 movement toward a more connected, meaningful, and resilient future.
 
-\undersign
+ 
+
+\vspace{\baselineskip}
+\begin{flushright}\noindent
+Place(s),\hfill {\it Firstname  Surname}\\
+month year\hfill {\it Firstname  Surname}\\
+\end{flushright}
+
+
